-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error
-issue#4917: Under certain circumstances Real Time counter gets stuck and does not count down
-issue#4921: Aggregate Graph Permissions not working as expected
-issue#4923: Graph template "duplicate" action does not working - 500 Internal Server Error
-issue#4927: When running audit_database.php script will fail if cacti password had a ')' in it
-issue#4934: Updated phpseclib to version 2.0.38 to support PHP 8.1
-issue#4935: Net-SNMP - Device I/O template Maximum Value is zero
-issue#4940: Error display Data Collectors when sorting by hostname
-issue#4941: Viewing graphs can break when boost is running in some rare cases
-issue#4944: Newer Cacti Packages should be signed with SHA256 as SHA1 is being deprecated
-issue#4947: When creating a Data Template, ensure that the default max value is always 'U' and not '0'
-issue#4960: Setting context for connections throws error in PHP 8.x
-issue#4963: Will the calculation rules of 95nth_percentile involve php and rrdtool versions
-issue#4964: Tree search not hiding non-matching tree objects
-issue#4966: When viewing the Device page, ensure that the Device Template filter only includes Devices Types in use
-issue#4971: Deprecation warnings in log files with php 8.2 associate with mib parser