@@ -208,7 +208,9 @@ function api_plugin_run_plugin_hook($hook, $plugin, $function, $args) {
 			if (api_plugin_status_run($hook, $required_capabilities, $plugin_capabilities, $plugin)) {
 				$function($args);
 			}
-		} elseif ($config['connection'] == 'online' || $config['connection'] == 'offline') {
+		} elseif ($config['connection'] == 'online' ||
+			((api_plugin_has_capability($plugin, 'offline_mgmt') || api_plugin_has_capability($plugin, 'offline_view'))
+			&& $config['connection'] != 'online')) {
 			$function($args);
 		} else {
 			// Don't run as they are not required
@@ -220,7 +222,7 @@ function api_plugin_run_plugin_hook($hook, $plugin, $function, $args) {
 			'config_insert',
 		);
 
-		if (in_array($hook, $remote_hooks) && $config['connection'] == 'offline') {
+		if (in_array($hook, $remote_hooks) && ($config['connection'] == 'offline' || $config['connection'] == 'recovery')) {
 			if (!api_plugin_has_capability($plugin, 'offline_mgmt')) {
 				if ($orig_menu !== $menu) {
 					$menu = $orig_menu;
@@ -281,7 +283,7 @@ function api_plugin_run_plugin_hook_function($hook, $plugin, $function, $ret) {
 
 function api_plugin_hook_is_remote_collect($hook, $plugin, $required_capabilities) {
 	if (isset($required_capabilities[$hook])) {
-		foreach ($required_capabilities[$hook] as $capability) {
+		foreach($required_capabilities[$hook] as $capability) {
 			if (strpos($capability, 'remote_collect') !== false) {
 				return true;
 			}
@@ -789,7 +791,7 @@ function api_plugin_install($plugin) {
 function api_plugin_uninstall_integrated() {
 	global $config, $plugin_hooks, $plugins_integrated;
 
-	foreach ($plugins_integrated as $plugin) {
+	foreach($plugins_integrated as $plugin) {
 		api_plugin_uninstall($plugin, false);
 	}
 }
@@ -811,20 +813,16 @@ function api_plugin_uninstall($plugin, $tables = true) {
 	api_plugin_remove_hooks($plugin);
 	api_plugin_remove_realms($plugin);
 
-	db_execute_prepared(
-		'DELETE FROM plugin_config
+	db_execute_prepared('DELETE FROM plugin_config
 		WHERE directory = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	if ($tables) {
 		api_plugin_db_changes_remove($plugin);
 	} else {
-		db_execute_prepared(
-			'DELETE FROM plugin_db_changes
+		db_execute_prepared('DELETE FROM plugin_db_changes
 			WHERE plugin = ?',
-			array($plugin)
-		);
+			array($plugin));
 	}
 
 	api_plugin_replicate_config();
@@ -856,12 +854,10 @@ function api_plugin_enable($plugin) {
 	if ($ready) {
 		api_plugin_enable_hooks($plugin);
 
-		db_execute_prepared(
-			'UPDATE plugin_config
+		db_execute_prepared('UPDATE plugin_config
 			SET status = 1
 			WHERE directory = ?',
-			array($plugin)
-		);
+			array($plugin));
 	}
 }
 
@@ -872,13 +868,10 @@ function api_plugin_is_enabled($plugin) {
 		return $pstatus[$plugin];
 	}
 
-	$status = db_fetch_cell_prepared(
-		'SELECT status
+	$status = db_fetch_cell_prepared('SELECT status
 		FROM plugin_config
 		WHERE directory = ?',
-		array($plugin),
-		false
-	);
+		array($plugin), false);
 
 	if ($status == '1') {
 		$pstatus[$plugin] = true;
@@ -894,12 +887,10 @@ function api_plugin_is_enabled($plugin) {
 function api_plugin_disable($plugin) {
 	api_plugin_disable_hooks($plugin);
 
-	db_execute_prepared(
-		'UPDATE plugin_config
+	db_execute_prepared('UPDATE plugin_config
 		SET status = 4
 		WHERE directory = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
@@ -918,12 +909,11 @@ function api_plugin_replicate_config() {
 			FROM poller
 			WHERE id > 1
 			AND disabled=""'),
-		'id',
-		'last_polled'
+		'id', 'last_polled'
 	);
 
 	if (cacti_sizeof($pollers)) {
-		foreach ($pollers as $poller_id => $last_polled) {
+		foreach($pollers as $poller_id => $last_polled) {
 			if ($last_polled < $gone_time) {
 				replicate_out($poller_id, 'plugins');
 			}
@@ -945,12 +935,11 @@ function api_plugin_drop_remote_table($table) {
 			FROM poller
 			WHERE id > 1
 			AND disabled=""'),
-		'id',
-		'last_polled'
+		'id', 'last_polled'
 	);
 
 	if (cacti_sizeof($pollers)) {
-		foreach ($pollers as $poller_id => $last_polled) {
+		foreach($pollers as $poller_id => $last_polled) {
 			$rcnn_id = poller_connect_to_remote($poller_id);
 
 			if ($rcnn_id !== false) {
@@ -963,33 +952,27 @@ function api_plugin_drop_remote_table($table) {
 function api_plugin_disable_all($plugin) {
 	api_plugin_disable_hooks_all($plugin);
 
-	db_execute_prepared(
-		'UPDATE plugin_config
+	db_execute_prepared('UPDATE plugin_config
 		SET status = 4
 		WHERE directory = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_moveup($plugin) {
-	$id = db_fetch_cell_prepared(
-		'SELECT id
+	$id = db_fetch_cell_prepared('SELECT id
 		FROM plugin_config
 		WHERE directory = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	if (!empty($id)) {
-		$temp_id = db_fetch_cell('SELECT MAX(id) FROM plugin_config') + 1;
+		$temp_id = db_fetch_cell('SELECT MAX(id) FROM plugin_config')+1;
 
-		$prior_id = db_fetch_cell_prepared(
-			'SELECT MAX(id)
+		$prior_id = db_fetch_cell_prepared('SELECT MAX(id)
 			FROM plugin_config
 			WHERE id < ?',
-			array($id)
-		);
+			array($id));
 
 		/* update the above plugin to the prior temp id */
 		db_execute_prepared('UPDATE plugin_config SET id = ? WHERE id = ?', array($temp_id, $prior_id));
@@ -1002,7 +985,7 @@ function api_plugin_moveup($plugin) {
 
 function api_plugin_movedown($plugin) {
 	$id      = db_fetch_cell_prepared('SELECT id FROM plugin_config WHERE directory = ?', array($plugin));
-	$temp_id = db_fetch_cell('SELECT MAX(id) FROM plugin_config') + 1;
+	$temp_id = db_fetch_cell('SELECT MAX(id) FROM plugin_config')+1;
 	$next_id = db_fetch_cell_prepared('SELECT MIN(id) FROM plugin_config WHERE id > ?', array($id));
 
 	/* update the above plugin to the prior temp id */
@@ -1016,14 +999,11 @@ function api_plugin_movedown($plugin) {
 function api_plugin_register_hook($plugin, $hook, $function, $file, $enable = false) {
 	$status = 0;
 
-	$exists = db_fetch_cell_prepared(
-		'SELECT COUNT(*)
+	$exists = db_fetch_cell_prepared('SELECT COUNT(*)
 		FROM plugin_hooks
 		WHERE name = ?
 		AND hook = ?',
-		array($plugin, $hook),
-		false
-	);
+		array($plugin, $hook), false);
 
 	if (!$exists) {
 		// enable the hooks if they are system level hooks to enable configuration
@@ -1034,12 +1014,10 @@ function api_plugin_register_hook($plugin, $hook, $function, $file, $enable = fa
 			$status = 1;
 		}
 
-		db_execute_prepared(
-			'INSERT INTO plugin_hooks
+		db_execute_prepared('INSERT INTO plugin_hooks
 			(name, hook, `function`, file, status)
 			VALUES (?, ?, ?, ?, ?)',
-			array($plugin, $hook, $function, $file, $status)
-		);
+			array($plugin, $hook, $function, $file, $status));
 	} else {
 		if ($enable == true) {
 			$status = 1;
@@ -1048,74 +1026,62 @@ function api_plugin_register_hook($plugin, $hook, $function, $file, $enable = fa
 		// enable the hook automatically if other hooks are already enabled
 		// for this plugin.
 		if (!$status) {
-			$exists = db_fetch_cell_prepared(
-				'SELECT COUNT(*)
+			$exists = db_fetch_cell_prepared('SELECT COUNT(*)
 				FROM plugin_hooks
 				WHERE name = ?
 				AND status = 1',
-				array($plugin)
-			);
+				array($plugin));
 
 			if ($exists > 0) {
 				$status = 1;
 			}
 		}
 
-		db_execute_prepared(
-			"UPDATE plugin_hooks
+		db_execute_prepared("UPDATE plugin_hooks
 			SET `function` = ?, `status` = ?,
 			`file` = ?
 			WHERE `name` = ?
 			AND `hook` = ?",
-			array($function, $status, $file, $plugin, $hook)
-		);
+			array($function, $status, $file, $plugin, $hook));
 	}
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_remove_hooks($plugin) {
-	db_execute_prepared(
-		'DELETE FROM plugin_hooks
+	db_execute_prepared('DELETE FROM plugin_hooks
 		WHERE name = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_enable_hooks($plugin) {
-	db_execute_prepared(
-		'UPDATE plugin_hooks
+	db_execute_prepared('UPDATE plugin_hooks
 		SET status = 1
 		WHERE name = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_disable_hooks($plugin) {
-	db_execute_prepared(
-		"UPDATE plugin_hooks
+	db_execute_prepared("UPDATE plugin_hooks
 		SET status = 4
 		WHERE name = ?
 		AND hook != 'config_settings'
 		AND hook != 'config_arrays'
 		AND hook != 'config_form'",
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_disable_hooks_all($plugin) {
-	db_execute_prepared(
-		"UPDATE plugin_hooks
+	db_execute_prepared("UPDATE plugin_hooks
 		SET status = 0
 		WHERE name = ?",
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
@@ -1125,19 +1091,17 @@ function api_plugin_register_realm($plugin, $file, $display, $admin = true) {
 
 	$i = 0;
 	$sql_where = '(';
-	foreach ($files as $tfile) {
-		$sql_where .= ($sql_where != '(' ? ' OR ' : '') .
+	foreach($files as $tfile) {
+		$sql_where .= ($sql_where != '(' ? ' OR ':'') .
 			' (file = "' . $tfile . '" OR file LIKE "' . $tfile . ',%" OR file LIKE "%,' . $tfile . ',%" OR file LIKE "%,' . $tfile . '")';
 	}
 	$sql_where .= ')';
 
-	$realm_ids = db_fetch_assoc_prepared(
-		"SELECT id
+	$realm_ids = db_fetch_assoc_prepared("SELECT id
 		FROM plugin_realms
 		WHERE plugin = ?
 		AND $sql_where",
-		array($plugin)
-	);
+		array($plugin));
 
 	if (cacti_sizeof($realm_ids) == 1) {
 		$realm_id = $realm_ids[0]['id'];
@@ -1148,47 +1112,37 @@ function api_plugin_register_realm($plugin, $file, $display, $admin = true) {
 		unset($realm_ids[0]);
 
 		foreach ($realm_ids as $id) {
-			$realm_info = db_fetch_row_prepared(
-				'SELECT *
+			$realm_info = db_fetch_row_prepared('SELECT *
 				FROM plugin_realms
 				WHERE id = ?',
-				array($id['id'])
-			);
+				array($id['id']));
 
 			if ($file == $realm_info['file']) {
-				db_execute_prepared(
-					'UPDATE IGNORE user_auth_realm
+				db_execute_prepared('UPDATE IGNORE user_auth_realm
 					SET realm_id = ?
 					WHERE realm_id = ?',
-					array($realm_id + 100, $realm_info['id'] + 100)
-				);
+					array($realm_id+100, $realm_info['id']+100));
 
-				db_execute_prepared(
-					'UPDATE IGNORE user_auth_group_realm
+				db_execute_prepared('UPDATE IGNORE user_auth_group_realm
 					SET realm_id = ?
 					WHERE realm_id = ?',
-					array($realm_id + 100, $realm_info['id'] + 100)
-				);
+					array($realm_id+100, $realm_info['id']+100));
 
-				db_execute_prepared(
-					'DELETE FROM plugin_realms
+				db_execute_prepared('DELETE FROM plugin_realms
 					WHERE id = ?',
-					array($realm_info['id'])
-				);
+					array($realm_info['id']));
 			} elseif (strpos($realm_info['file'], $file)) {
 				if (substr($realm_info['file'], 0, strlen($file)) == $file) {
-					$file = substr($file, strlen($file) - 1);
+					$file = substr($file, strlen($file)-1);
 				} else {
 					$file = str_replace(',' . $file, '', $realm_info['file']);
 					$file = str_replace(',,', ',', $file);
 				}
 
-				db_execute_prepared(
-					'UPDATE plugin_realms
+				db_execute_prepared('UPDATE plugin_realms
 					SET file = ?
 					WHERE id = ?',
-					array($file, $realm_info['id'])
-				);
+					array($file, $realm_info['id']));
 			}
 		}
 	} else {
@@ -1196,22 +1150,17 @@ function api_plugin_register_realm($plugin, $file, $display, $admin = true) {
 	}
 
 	if ($realm_id === false) {
-		db_execute_prepared(
-			'REPLACE INTO plugin_realms
+		db_execute_prepared('REPLACE INTO plugin_realms
 			(plugin, file, display)
 			VALUES (?, ?, ?)',
-			array($plugin, $file, $display)
-		);
+			array($plugin, $file, $display));
 
 		if ($admin) {
-			$realm_id = db_fetch_cell_prepared(
-				'SELECT id
+			$realm_id = db_fetch_cell_prepared('SELECT id
 				FROM plugin_realms
 				WHERE plugin = ?
 				AND file = ?',
-				array($plugin, $file),
-				false
-			);
+				array($plugin, $file), false);
 
 			$realm_id = $realm_id + 100;
 
@@ -1221,58 +1170,45 @@ function api_plugin_register_realm($plugin, $file, $display, $admin = true) {
 			}
 
 			if (cacti_sizeof($user_ids)) {
-				foreach ($user_ids as $user_id) {
-					db_execute_prepared(
-						'REPLACE INTO user_auth_realm
+				foreach($user_ids as $user_id) {
+					db_execute_prepared('REPLACE INTO user_auth_realm
 						(user_id, realm_id)
 						VALUES (?, ?)',
-						array($user_id, $realm_id)
-					);
+						array($user_id, $realm_id));
 				}
 			}
 		}
 	} else {
-		db_execute_prepared(
-			'UPDATE plugin_realms
+		db_execute_prepared('UPDATE plugin_realms
 			SET display = ?,
 			file = ?
 			WHERE id = ?',
-			array($display, $file, $realm_id)
-		);
+			array($display, $file, $realm_id));
 	}
 
 	api_plugin_replicate_config();
 }
 
 function api_plugin_remove_realms($plugin) {
-	$realms = db_fetch_assoc_prepared(
-		'SELECT id
+	$realms = db_fetch_assoc_prepared('SELECT id
 		FROM plugin_realms
 		WHERE plugin = ?',
-		array($plugin),
-		false
-	);
+		array($plugin), false);
 
 	foreach ($realms as $realm) {
 		$id = $realm['id'] + 100;
-		db_execute_prepared(
-			'DELETE FROM user_auth_realm
+		db_execute_prepared('DELETE FROM user_auth_realm
 			WHERE realm_id = ?',
-			array($id)
-		);
+			array($id));
 
-		db_execute_prepared(
-			'DELETE FROM user_auth_group_realm
+		db_execute_prepared('DELETE FROM user_auth_group_realm
 			WHERE realm_id = ?',
-			array($id)
-		);
+			array($id));
 	}
 
-	db_execute_prepared(
-		'DELETE FROM plugin_realms
+	db_execute_prepared('DELETE FROM plugin_realms
 		WHERE plugin = ?',
-		array($plugin)
-	);
+		array($plugin));
 
 	api_plugin_replicate_config();
 }
@@ -1288,7 +1224,7 @@ function api_plugin_load_realms() {
 		foreach ($plugin_realms as $plugin_realm) {
 			$plugin_files = explode(',', $plugin_realm['file']);
 
-			foreach ($plugin_files as $plugin_file) {
+			foreach($plugin_files as $plugin_file) {
 				$user_auth_realm_filenames[$plugin_file] = $plugin_realm['id'] + 100;
 			}
 
